# vscode-cxx-devcontainer

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.devcontainer/: devcontainer.json
benchmarks/: CMakeLists.txt  bench_main.cpp
cmake/: LlvmSanitizers.cmake
src/: core.ixx  hello.ixx  main.cpp
tests/: CMakeLists.txt  main_test.cpp
